--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -31,3 +31,8 @@ $code-text-color: #25292e !default;
 
 // Borders
 $border-color: #dce6f0 !default;
+
+
+$head-bg: #26262A;
+
+$head-content: #fff;
