--- a/_sass/pages/_page.scss
+++ b/_sass/pages/_page.scss
@@ -1,6 +1,6 @@
 .hero {
-  margin: 3.75rem auto 0;
-  min-height: 16.25rem;
+  margin: 0 auto 0;
+  min-height: 300px;
   width: 100%;
   position: relative;
   background-color: #dde5ea;
@@ -9,8 +9,8 @@
   background-size: cover;
 
   @include breakpoint($lg) {
-    margin: 0 auto;
-    height: 36em;
+    margin: 0 0 auto;
+    height: 340px;
   }
 
   &::before {
@@ -21,12 +21,12 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(52, 56, 81, .8);
+    background: rgba(38, 38, 42, 1.0);
   }
 }
 
 .hero--small {
-  margin: 3.75rem auto 0;
+  margin: 0 auto 0;
   min-height: 8.75rem;
   width: 100%;
   position: relative;
@@ -44,7 +44,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(52, 56, 81, .8);
+    background: rgba(38, 38, 42, 1.0);
   }
 }
 
